http://bugzilla.liquidsys.com/show_bug.cgi?id=3284 http://bugzilla.liquidsys.com/show_bug.cgi?id=3177 bug: 3284, 3177 + Make the shell overflow auto, and don't allow dialogs on firefox to go outside of the app at all.
Copied from Perforce
 Change: 11687

--- a/WebRoot/js/zimbraMail/config/style/zm.css
+++ b/WebRoot/js/zimbraMail/config/style/zm.css
@@ -209,7 +209,6 @@ DIV.vSpace {
   position:absolute;
   top:0px;
   left:0px;
-  overflow:hidden;
 }
 .MainShell {
 	background-color: #B7B7B7;
